# umbrella_api

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt
umbrella_api/: __init__.py  adapter.py  client.py  exceptions.py  resources.py  utils.py
