[project]
name = "umbrella_api"
version = "0.1.0"
description = "A simple API wrapper for the Cisco Umbrella Policies API"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE.txt"}
authors = [
  { name="Chris Doucette", email="chrisdoucette15@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "certifi~=2022.12.7",
  "charset-normalizer~=3.0.1",
  "idna~=3.4",
  "oauthlib~=3.2.2",
  "requests~=2.28.2",
  "requests-oauthlib~=1.3.1",
  "urllib3~=1.26.14"
]

[project.urls]
"Homepage" = "https://github.com/thegrumpyape/umbrella_api"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = 'setuptools.build_meta'